Bug 256690 - Sending invitations crashs Korganizer Mobile
Summary: Sending invitations crashs Korganizer Mobile
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-12 12:54 UTC by Ludwig Reiter
Modified: 2010-12-10 15:06 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-11-12 12:54:31 UTC
version: 20101112 / svn 1195843

Start a new event.
Enter an attendee in the More->Attendees Tab.
=> The flap cannot be closed. But I can...
Click on "Save"
=> I am asked if I want to send the mail.
Click on Send to attendee.
=> Crash.
I should send an invitation to the attendee.
Comment 1 Sergio Martins 2010-11-16 19:10:44 UTC
Can't reproduce on korg-mobile running on the desktop.

Can you get a backtrace? I believe Andre has a setup that can get BTs in wince.
Comment 2 Andre Heinecke 2010-11-17 18:03:26 UTC
Not really a backtrace, with rel with debug i run out of virtual addresses when starting korganizer without the loader.
But the following should be helpful:

korganizer-mobile(3288125150)/libkdepim class QObject *__cdecl Akonadi::PluginLoader::createForName(const class QString &): "Could not find plugin 'akonadi_serializer_mail' for application 'korganizer-mobile'" 
korganizer-mobile(3288125150)/libakonadi class QObject *__cdecl Akonadi::PluginEntry::plugin(void) const: ItemSerializerPluginLoader:  plugin "message/rfc822@KMime::Message*" is not valid! 

korganizer-mobile(3288125150)/libakonadi class QObject *__cdecl Akonadi::PluginEntry::plugin(void) const: ItemSerializerPluginLoader:  plugin "message/rfc822@KMime::Message*" doesn't provide interface ItemSerializerPlugin! 

RaiseException: Thread=89a04400 Proc=80462af0 'korganizer-mobile.exe'
AKY=80000001 PC=03f8eb54(coredll.dll+0x00044b54) RA=800284f8(NK.EXE+0x000284f8) BVA=00000000 FSR=00000000
Unhandled exception at 0x03f8eb54 in korganizer-mobile.exe: Microsoft C++ exception: Akonadi::PayloadException at memory location 0x418bed1c..
Comment 3 Andre Heinecke 2010-11-17 18:16:43 UTC
the pluginloading code has to be changed to allow static serializers i think.
Comment 4 Andreas Holzammer 2010-11-18 07:58:24 UTC
yes the akonadi_serializer_mail is not linked in, will change this.
Comment 5 Andreas Holzammer 2010-11-18 08:52:49 UTC
fixed in svn 1198301
Comment 6 Andre Heinecke 2010-11-19 12:49:01 UTC
Now trying to send an invitation brings up a message box 
text/calendar@default is not buildin static
after that:
text/calendar@KCalCore::Incidence * is not buildin static
Comment 7 Andreas Holzammer 2010-11-22 09:27:17 UTC
SVN commit 1199518 by aholzammer:

- Dont make false alarm that a plugin is missing for wince

BUG: 256690

 M  +10 -8     pluginloader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1199518
Comment 8 Ludwig Reiter 2010-12-10 15:06:22 UTC
version: 4.6. beta2 (svn-1204839)
Test of the description no longer crash.
(But the invitation stays in the outbox. Another problem.)

Close this one.