- Dont make false alarm that a plugin is missing for wince

BUG: 256690

svn path=/trunk/KDE/kdepimlibs/; revision=1199518